#4: set full logo animation

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 title: Stork Wood Work
 layout: default
 ---
-
+<section class="intro">
+	<div class="intro__logo">
+		{% include logo-full.html %}
+	</div>
+</section>
 
 hello world content
