#4: set tools animetion with scroll

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@ layout: default
 	<div class="intro__logo">
 		{% include logo-full.html %}
 	</div>
+	<div class="intro__tools">
+		{% include tools.html %}
+	</div>
 </section>
-
-hello world content
+<main class="main-content">
+	hello world content
+</main>
