#3: set basic layout form index.html

--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@ layout: default
 	<div class="intro__logo">
 		{% include logo-full.html %}
 	</div>
-	<div class="intro__tools">
+	<div class="intro__tools js-intro-tools">
 		{% include tools.html %}
 	</div>
 </section>
 <main class="main-content">
-	hello world content
+	<h1>Projekty</h1>
+	<ul class="projects">
+		<li class="square-double biurko"><a href="#">Biurko</a></li>
+		<li class="rect-3x4 szafa"><a href="#">Szafa</a></li>
+		<li class="square-double stol"><a href="#">Stół</a></li>
+		<li class="square-basic kredens"><a href="#">Kredens</a></li>
+		<li class="square-triple lawa"><a href="#">Ławka</a></li>
+		<li class="rect-2x3 polka"><a href="#">Półka</a></li>
+	</ul>
 </main>
